fix: align icons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,7 @@ svg {
   width: 24px;
   height: 24px;
   fill: currentColor;
+  vertical-align: unset;
 }
 
 svg.feather {
